<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context="com.example.elvisgame.MainActivity">

    <!-- New TextView for name and matric number -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fall Words by Elvis Sawing (U2101680)"
        android:id="@+id/text_name_matric"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:padding="10dp" />

    <!-- Existing TextViews and other components, adjusted to be below the new TextView -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/correct_text"
        android:id="@+id/text_correct_text"
        android:layout_below="@+id/text_name_matric"
        android:layout_alignParentStart="true"
        android:textColor="#558b2f"
        android:paddingLeft="10dp"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/text_wrong_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name_matric"
        android:layout_marginStart="114dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/text_correct_text"
        android:paddingTop="5dp"
        android:text="@string/wrong_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/text_noanswer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name_matric"
        android:layout_marginStart="68dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/text_wrong_text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/noanswer_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#8d8101" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/correct_value"
        android:id="@+id/text_correct"
        android:layout_below="@+id/text_name_matric"
        android:layout_toEndOf="@+id/text_correct_text"
        android:textColor="#558b2f"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wrong_value"
        android:id="@+id/text_wrong"
        android:layout_below="@+id/text_name_matric"
        android:layout_toEndOf="@+id/text_wrong_text"
        android:textColor="@android:color/holo_red_dark"
        android:paddingRight="20dp"
        android:paddingTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/noanswer_value"
        android:id="@+id/text_noanswer"
        android:layout_below="@+id/text_name_matric"
        android:layout_toEndOf="@+id/text_noanswer_text"
        android:textColor="#8d8101"
        android:layout_alignParentEnd="true"
        android:paddingRight="10dp"
        android:paddingTop="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/text_correct_text"
        android:layout_above="@+id/button_wrong">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/top_border"
            android:src="#010100"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:id="@+id/bottom_border"
            android:src="#010100"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/translation_value"
            android:id="@+id/text_translation"
            android:layout_below="@+id/top_border"
            android:layout_centerHorizontal="true"
            android:textColor="#8d8101" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/button_wrong"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:src="@android:drawable/ic_delete"
        android:scaleType="fitCenter"
        android:layout_alignParentEnd="false"
        android:background="@android:color/holo_red_dark"
        app:tint="#000000" />

    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/button_right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_input_add"
        android:background="#558b2f"
        android:scaleType="fitEnd"
        app:tint="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/request_word"
        android:id="@+id/text_word"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button_wrong"
        android:layout_toStartOf="@id/button_right"
        android:layout_alignTop="@+id/button_wrong"
        android:textAlignment="center"
        android:maxLines="3"
        android:textColor="@android:color/black"
        android:paddingTop="2dp" />

</RelativeLayout>
